--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,34 @@
 // Navigation Styles here
+.navbar {
+  @displayflex();
+  border-bottom: 2px dashed @navigation-border;
+
+  .logo {
+    margin: @margin;
+    font-family: @font;
+    color: @shark;
+    font-size: 30px;
+    text-decoration: none;
+    font-weight: 800;
+  }
+
+  ul {
+    @displayflex();
+    margin: @margin;
+  }
+
+  li {
+    padding: 0 20px;
+
+    a {
+      text-decoration: none;
+      font-size: 16px;
+      font-family: @font;
+      color: @shark;
+
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+  }
+}
