--- a/css/index.css
+++ b/css/index.css
@@ -209,6 +209,15 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .main-header {
+  border-bottom: 2px dotted #c0c0c0;
+}
+.home .main-header h1 {
+  margin: 2% 0;
+}
+.home .main-header p {
+  margin: 2% 0;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
