--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,15 @@
 .home {
+  .main-header {
+    border-bottom: 2px dotted @navigation-border;
+
+    h1 {
+      margin: @margin;
+    }
+
+    p {
+      margin: @margin;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,8 +17,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -58,4 +67,4 @@
       margin-bottom: 30px;
     }
   }
-}// home
+} // home
