--- a/less/home-page.less
+++ b/less/home-page.less
@@ -65,6 +65,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .primary-btn(20px, @main-bg, @eastern-blue);
+      }
     }
   }
 } // home
