--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins in here
+.primary-btn(@padding, @fontColor, @bgColor) {
+  justify-content: center;
+  display: flex;
+  border-radius: 20px;
+  padding: @padding;
+  color: @fontColor;
+  background: @bgColor;
+}
