--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,7 +4,7 @@
   border-bottom: 2px dashed @navigation-border;
 
   .logo {
-    margin: @margin;
+    margin: 2% 0 1% 0;
     font-family: @font;
     color: @shark;
     font-size: 30px;
@@ -23,7 +23,7 @@
     a {
       text-decoration: none;
       font-size: 16px;
-      font-family: @font;
+
       color: @shark;
 
       &:hover {
