--- a/less/variables.less
+++ b/less/variables.less
@@ -15,11 +15,8 @@
 // Font Family
 @font: "Indie Flower", cursive;
 
-// flex
-@displayflex: {
-  display: flex;
-  justify-content: space-between;
-};
-
 // Margin
 @margin: 2% 0;
+
+// Mobile
+@mobile: ~"(max-width: 500px)";
