--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,9 @@ img {
 .navbar {
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
+  align-items: none;
+  flex-flow: none;
   border-bottom: 2px dashed #c0c0c0;
 }
 .navbar .logo {
@@ -183,7 +186,10 @@ img {
 }
 .navbar ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: none;
+  flex-direction: row;
+  align-items: none;
+  flex-flow: none;
   margin: 2% 0;
 }
 .navbar li {
@@ -196,6 +202,15 @@ img {
 }
 .navbar li a:hover {
   opacity: 0.5;
+}
+@media (max-width: 500px) {
+  .navbar {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    flex-flow: none;
+  }
 }
 .footer {
   width: 100%;
@@ -220,8 +235,10 @@ img {
 .home .content-section {
   margin: 30px 0;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  flex-direction: row;
+  align-items: none;
+  flex-flow: wrap;
 }
 .home .content-section .text-content {
   width: 48%;
@@ -254,20 +271,64 @@ img {
   border-radius: 10px;
 }
 .home .content-pick {
-  padding-top: 30px;
-  border-top: 2px dashed #c0c0c0;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
+  align-items: none;
+  flex-flow: none;
+  padding-top: 30px;
+  border-top: 2px dashed #c0c0c0;
 }
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
 .home .content-pick .destination .btn {
-  justify-content: center;
   display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: none;
+  flex-flow: none;
   border-radius: 20px;
   padding: 20px;
   color: #ffffff;
   background: #17a2b8;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: none;
+    flex-flow: none;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+    padding-right: 0;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 0;
+  }
+  .home .content-section .img-content img {
+    border-radius: 10px;
+    width: 100%;
+    padding: 0 2%;
+    margin: 2% 0;
+  }
+  .home .content-destination {
+    width: 85%;
+  }
+  .home .content-pick {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: none;
+    flex-flow: none;
+    margin: 2% 10%;
+  }
+  .home .content-pick .destination {
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
