--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -183,6 +188,9 @@ img {
   font-size: 30px;
   text-decoration: none;
   font-weight: 800;
+}
+.navbar .logo:hover {
+  animation: rotate 1.5s infinite;
 }
 .navbar ul {
   display: flex;
