--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,5 @@
 .home {
+  // Header
   .main-header {
     border-bottom: 2px dotted @navigation-border;
 
@@ -11,6 +12,7 @@
     }
   }
 
+  // Main content
   .content-section {
     margin: 30px 0;
     .displayflex(space-between, row, none, wrap);
@@ -67,6 +69,7 @@
     }
   }
 
+  //  submission form
   .main-form {
     padding: 2% 0 5% 0;
     border-top: 2px dashed @navigation-border;
@@ -81,7 +84,6 @@
     form {
       margin: 5% 0;
       border: 2px solid @navigation-border;
-
       .displayflex(space-around, row, center, none);
 
       .form-top {
@@ -151,6 +153,19 @@
       .destination {
         width: 100%;
         margin-bottom: 30px;
+      }
+    }
+    //  submission form
+    .main-form {
+      form {
+        margin: 5% 0;
+        border: none;
+        .displayflex(space-around, column, center, none);
+
+        .form-bottom {
+          border-top: 2px solid @navigation-border;
+          width: 80%;
+        }
       }
     }
   }
