--- a/css/index.css
+++ b/css/index.css
@@ -409,3 +409,54 @@ img {
     width: 80%;
   }
 }
+@media (max-width: 820px) {
+  .home .content-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: none;
+    flex-flow: none;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+    padding-right: 0;
+  }
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 0;
+  }
+  .home .content-section .img-content img {
+    border-radius: 10px;
+    width: 100%;
+    padding: 0 2%;
+    margin: 2% 0;
+  }
+  .home .content-destination {
+    width: 85%;
+  }
+  .home .content-pick {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: none;
+    flex-flow: none;
+    margin: 2% 10%;
+  }
+  .home .content-pick .destination {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .home .main-form form {
+    margin: 5% 0;
+    border: none;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    flex-flow: none;
+  }
+  .home .main-form form .form-bottom {
+    border-top: 2px solid #c0c0c0;
+    width: 80%;
+  }
+}
